# openapi.yml
@@ -249,6 +249,11 @@ paths:
             type: string
         description: 'Include only specified fields in the response. Multiple values
           may be separated by commas. Example: `include_fields=software_build.build_id,name`'
+      - in: query
+        name: latest_components
+        schema:
+          type: boolean
+        description: Show only latest component versions
       - name: limit
         required: false
         in: query
@@ -334,6 +339,11 @@ paths:
         name: release
         schema:
           type: string
+      - in: query
+        name: root_components
+        schema:
+          type: boolean
+        description: Show only root components (source RPMs, index container images)
       - name: search
         required: false
         in: query
